<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- 激活界面 -->
    <string name="reggate_register_title">激活 - %1$s</string>
    <string name="reggate_request_code_label">本机安装码</string>
    <string name="reggate_copy_request">复制安装码</string>
    <string name="reggate_activation_code_label">激活码</string>
    <string name="reggate_activation_code_hint">在此粘贴激活码</string>
    <string name="reggate_paste">粘贴</string>
    <string name="reggate_activate">激活</string>
    <string name="reggate_scan_qr">扫码激活</string>
    <string name="reggate_pick_qr">相册识别</string>
    <string name="reggate_scan_prompt">将激活码二维码放入框内</string>
    <string name="reggate_scan_request_prompt">将安装码二维码放入框内</string>
    <string name="reggate_request_qr_recognized">安装码已识别</string>
    <string name="reggate_show_request_qr">二维码</string>
    <string name="reggate_request_qr_title">本机安装码二维码</string>
    <string name="reggate_request_qr_subtitle">请卖家使用注册机「扫码」读取，\n或保存/发送图片给卖家</string>
    <string name="reggate_qr_dialog_save">保存图片</string>
    <string name="reggate_qr_dialog_share">发送图片</string>
    <string name="reggate_qr_dialog_close">关闭</string>
    <string name="reggate_qr_chooser_title">发送安装码二维码</string>
    <string name="reggate_qr_not_found">未在图片中识别到二维码</string>
    <string name="reggate_qr_load_failed">图片读取失败,请重试</string>
    <string name="reggate_request_copied">安装码已复制</string>
    <string name="reggate_activate_success">激活成功</string>
    <string name="reggate_how_to">将安装码发给卖家获取激活码，粘贴或扫码后点击"激活"。</string>

    <string name="reggate_hint_trial_remaining">您当前处于试用期,剩余 %1$d 天</string>
    <string name="reggate_hint_need_activate">请输入激活码以激活应用</string>
    <string name="reggate_hint_trial_expired">应用已到期,请激活后使用</string>
    <string name="reggate_hint_license_expired">授权已到期,请重新激活</string>
    <string name="reggate_hint_expired">已到期,请激活后使用</string>
    <string name="reggate_hint_time_tampered">检测到注册异常，请重新注册</string>
    <string name="reggate_hint_registration_anomaly">注册异常，请重新注册</string>

    <!-- 试用框 -->
    <string name="reggate_trial_title">%1$s - 试用版</string>
    <string name="reggate_trial_msg">您有 %1$d 天试用期,剩余 %2$d 天。\n如需继续使用,请激活。</string>
    <string name="reggate_continue_trial">继续试用</string>
    <string name="reggate_register_now">立即激活</string>

    <!-- 到期提示框 -->
    <string name="reggate_nag_title">%1$s - 已到期</string>
    <string name="reggate_nag_trial_expired">您的应用已到期,请激活后继续使用完整功能。</string>
    <string name="reggate_nag_license_expired">您的授权已到期,请重新激活以继续使用。</string>
    <string name="reggate_nag_default">已到期,请激活后使用。</string>
    <string name="reggate_nag_continue">继续使用</string>
    <string name="reggate_nag_activate_now">立即激活</string>

    <!-- 联系方式 -->
    <string name="reggate_contact_title">联系方式</string>
    <string name="reggate_contact_phone_label">电话: %1$s</string>
    <string name="reggate_contact_email_label">邮箱: %1$s</string>
    <string name="reggate_contact_website_label">网址: %1$s</string>
    <string name="reggate_contact_shop_label">网店: %1$s</string>
    <string name="reggate_copy">复制</string>
    <string name="reggate_copy_success">已复制</string>
    <string name="reggate_save_qr">保存二维码</string>
    <string name="reggate_save_qr_success">二维码已保存到相册</string>
    <string name="reggate_save_qr_failed">保存失败,请重试</string>
    <string name="reggate_qr_share_failed">发送失败,请重试</string>

</resources>
